--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header class="header">
         <img src="images/header__logo.svg" class="header__logo" alt="логотип"></img>
         <nav class="header__lang">
-            <a href="#" class="header__lang-link header__lang-link_text_underline">Ru</a>
-            <a href="#" class="header__lang-link">En</a>
+            <a href="#" class="header__link header__link_active_underline">Ru</a>
+            <a href="#" class="header__link">En</a>
         </nav>
     </header>
 
