--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- HEADER -->
 
     <header class="header">
-        <img src="images/header__logo.svg" class="header__logo" alt="логотип"></img>
+        <img src="images/logo.svg" class="logo" alt="логотип"></img>
         <nav class="header__lang">
             <a href="#" class="header__link header__link_active_underline">Ru</a>
             <a href="#" class="header__link">En</a>
@@ -85,7 +85,7 @@
 
     <section class="places">
         <article class="place">
-            <h3 class="place__title">Куршская<br>коса</h3>
+            <h3 class="place__title">Куршская <br>коса</h3>
             <div class="place__website">
                 <h4 class="website__url-heading">URL</h4>
                 <a href="http://park-kosa.ru" class="website__link">park-kosa.ru</a>
@@ -96,7 +96,7 @@
                     —
                     спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
                     Уникальная природная зона на краю российского анклава.</p>
-                <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+                <p class="place__paragraph">На этом Калининградская область не заканчивается. <br>Для путешественника и
                     исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
                     наследие
                     россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие
@@ -157,7 +157,7 @@
                     в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
                     России.</p>
                 <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-                    скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+                    скийорингу. Это такой вид спорта, когда лыжник привязывает себя <br>
                     к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
                     фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
@@ -188,7 +188,7 @@
         <div class="cover__text">
             <h2 class="cover__title">До Байкала<br>
                 «на собаках»</h2>
-            <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
+            <h3 class="cover__subtitle">По мотивам учебной темы <br>о Транссибе и iframes — путешествие <br>от столицы до
                 Байкала на
                 электричках.</h3>
         </div>
