--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <!-- LEAD -->
-    
+
     <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
@@ -185,15 +185,14 @@
     <!-- COVER -->
 
     <section class="cover">
-        <div class="cover__text">
-            <h2 class="cover__title">До Байкала<br>
-                «на собаках»</h2>
-            <h3 class="cover__subtitle">По мотивам учебной темы <br>о Транссибе и iframes — путешествие <br>от столицы до
+        <img src="images/cover__background.svg" alt="обложка" class="cover__background">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <h3 class="cover__subtitle">По мотивам учебной темы <br>о Транссибе и iframes — путешествие <br>от столицы
+                до
                 Байкала на
                 электричках.</h3>
-        </div>
-        <img src="images/cover__background.svg" alt="обложка" class="cover__background">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
+        </a>
     </section>
 
     <!-- FOOTER -->
