--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-            <img src="images/lead__image.svg" alt="обложка" class="lead__image">
+            <img src="images/lead__image.svg" alt="обложка вагон поезд" class="lead__image">
             <p class="lead__capture">ваша полка — верхняя</p>
         </section>
 
@@ -74,18 +74,18 @@
         <!-- PHOTO-GRID -->
 
         <section class="photo-grid">
-            <img src="images/__item1.jpg" alt="фото1" class="photo-grid__item">
-            <img src="images/__item2.jpg" alt="фото2" class="photo-grid__item">
-            <img src="images/__item3.jpg" alt="фото3" class="photo-grid__item">
-            <img src="images/__item4.jpg" alt="фото4" class="photo-grid__item">
-            <img src="images/__item5.jpg" alt="фото5" class="photo-grid__item">
-            <img src="images/__item6.jpg" alt="фото6" class="photo-grid__item">
-            <img src="images/__item7.jpg" alt="фото7" class="photo-grid__item">
-            <img src="images/__item8.jpg" alt="фото8" class="photo-grid__item">
-            <img src="images/__item9.jpg" alt="фото9" class="photo-grid__item">
-            <img src="images/__item10.jpg" alt="фото10" class="photo-grid__item">
-            <img src="images/__item11.jpg" alt="фото11" class="photo-grid__item">
-            <img src="images/__item12.jpg" alt="фото12" class="photo-grid__item">
+            <img src="images/__item1.jpg" alt="вагон окно" class="photo-grid__item">
+            <img src="images/__item2.jpg" alt="небо облака" class="photo-grid__item">
+            <img src="images/__item3.jpg" alt="поле недо стог" class="photo-grid__item">
+            <img src="images/__item4.jpg" alt="туман тайга" class="photo-grid__item">
+            <img src="images/__item5.jpg" alt="лед колесо" class="photo-grid__item">
+            <img src="images/__item6.jpg" alt="море небо песок" class="photo-grid__item">
+            <img src="images/__item7.jpg" alt="горы" class="photo-grid__item">
+            <img src="images/__item8.jpg" alt="знак пешеход" class="photo-grid__item">
+            <img src="images/__item9.jpg" alt="сопки таман" class="photo-grid__item">
+            <img src="images/__item10.jpg" alt="вулкан" class="photo-grid__item">
+            <img src="images/__item11.jpg" alt="скалы" class="photo-grid__item">
+            <img src="images/__item12.jpg" alt="туман" class="photo-grid__item">
         </section>
 
         <!-- PLACES -->
@@ -94,10 +94,10 @@
             <article class="place">
                 <h3 class="place__title">Куршская коса</h3>
                 <div class="place__website">
-                    <h4 class="website__url-heading">URL</h4>
-                    <a href="http://park-kosa.ru" class="website__link">park-kosa.ru</a>
+                    <h4 class="place__url-heading">URL</h4>
+                    <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
                 </div>
-                <img src="images/kurshskaya.jpg" alt="куршская фото" class="place__image">
+                <img src="images/kurshskaya.jpg" alt="куршская коса море небо" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
@@ -115,11 +115,11 @@
             <article class="place">
                 <h3 class="place__title">Кольский</h3>
                 <div class="place__website">
-                    <h4 class="website__url-heading">URL</h4>
+                    <h4 class="place__url-heading">URL</h4>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                        class="website__link">National Geographic</a>
+                        class="place__link" target="_blank">National Geographic</a>
                 </div>
-                <img src="images/kolskiy.jpg" alt="кольский фото" class="place__image">
+                <img src="images/kolskiy.jpg" alt="кольский снег сопки" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой
@@ -138,11 +138,11 @@
             <article class="place">
                 <h3 class="place__title">Алтай</h3>
                 <div class="place__website">
-                    <h4 class="website__url-heading">URL</h4>
+                    <h4 class="place__url-heading">URL</h4>
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-                        class="website__link">Facebook</a>
+                        class="place__link">Facebook</a>
                 </div>
-                <img src="images/altay.jpg" alt="алтай фото" class="place__image">
+                <img src="images/altay.jpg" alt="алтай тайга ноутбук" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
@@ -161,10 +161,10 @@
             <article class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
                 <div class="place__website">
-                    <h4 class="website__url-heading">URL</h4>
-                    <a href="https://vk.com/baikalmile" class="website__link">https://vk.com/baikalmile</a>
+                    <h4 class="place__url-heading">URL</h4>
+                    <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <img src="images/baykal.jpg" alt="байкал фото" class="place__image">
+                <img src="images/baykal.jpg" alt="байкал озеро" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
@@ -178,10 +178,10 @@
             <article class="place">
                 <h3 class="place__title">Карелия</h3>
                 <div class="place__website">
-                    <h4 class="website__url-heading">URL</h4>
-                    <a href="http://vodlozero.ru" class="website__link">http://vodlozero.ru/</a>
+                    <h4 class="place__url-heading">URL</h4>
+                    <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
                 </div>
-                <img src="images/kareliya.jpg" alt="карелия фото" class="place__image">
+                <img src="images/kareliya.jpg" alt="карелия тайга" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                         сибирская
@@ -201,7 +201,7 @@
         <!-- COVER -->
 
         <section class="cover">
-            <img src="images/cover__background.svg" alt="обложка" class="cover__background">
+            <img src="images/cover__background.svg" alt="поезда составы рельсы" class="cover__background">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <!-- для разрешения 320, необходимо добавлять <br> после "темы" и "путешествие", чтобы совпало с дизайном макета, неразрывные пробелы тоже не подходят-->
@@ -216,13 +216,13 @@
 
     <footer class="footer">
         <nav class="footer__links">
-            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
         </nav>
-        <p class="footer__copyright">© 2020 г. Павео Хохлов</p>
+        <p class="footer__copyright">© 2020 г. Павел Хохлов</p>
     </footer>
 </body>
 
