работа над ошибками 21ю07

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- INTRO -->
 
         <section class="intro">
-            <h3 class="intro__title">Чего мы там не видели?</h3>
+            <h3 class="intro__title">Чего мы там не&nbsp;видели?</h3>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
                 провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
                 вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
@@ -104,7 +104,8 @@
                         —
                         спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
                         Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и
+                    <p class="place__paragraph">На этом Калининградская область не заканчивается.
+                        Для&nbsp;путешественника и
                         исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
                         наследие
                         россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
@@ -116,8 +117,8 @@
                 <h3 class="place__title">Кольский</h3>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                        class="place__link" target="_blank">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
+                        target="_blank">National Geographic</a>
                 </div>
                 <img src="images/kolskiy.jpg" alt="кольский снег сопки" class="place__image">
                 <div class="place__text">
@@ -162,7 +163,8 @@
                 <h3 class="place__title">Зимний Байкал</h3>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" class="place__link"
+                        target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img src="images/baykal.jpg" alt="байкал озеро" class="place__image">
                 <div class="place__text">
@@ -171,7 +173,8 @@
                         мест в
                         России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается
+                        развить как можно бóльшую скорость на льду. В марте 2019 года на
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
             </article>
@@ -201,11 +204,10 @@
         <!-- COVER -->
 
         <section class="cover">
-            <img src="images/cover__background.svg" alt="поезда составы рельсы" class="cover__background">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <!-- для разрешения 320, необходимо добавлять <br> после "темы" и "путешествие", чтобы совпало с дизайном макета, неразрывные пробелы тоже не подходят-->
-                <h3 class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие от&nbsp;столицы&nbsp;до
+                <h3 class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие
+                    от&nbsp;столицы&nbsp;до
                     Байкала на
                     электричках.</h3>
             </a>
