--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
                         мест в
                         России.</p>
-                    <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по
-                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и&nbsp;тандем&nbsp;старается
+                    <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное
+                        место&nbsp;для соревнований по
+                        скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу,
+                        и&nbsp;тандем&nbsp;старается
                         развить как можно бóльшую скорость на льду. В марте 2019 года на
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
@@ -217,13 +219,20 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <ul class="footer__links"><!-- исправил на ul-->
-            <li class="footer__li"><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
-            <li class="footer__li"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
-            <li class="footer__li"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
-            <li class="footer__li"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
-            <li class="footer__li"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
-        </ul>
+        <nav class="footer__nav">
+            <ul class="footer__links">
+                <li class="footer__li"><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+                </li>
+                <li class="footer__li"><a href="https://yandex.ru/pogoda" class="footer__link"
+                        target="_blank">Погода</a></li>
+                <li class="footer__li"><a href="https://rasp.yandex.ru" class="footer__link"
+                        target="_blank">Расписание</a></li>
+                <li class="footer__li"><a href="https://calendar.yandex.ru" class="footer__link"
+                        target="_blank">Календарь</a></li>
+                <li class="footer__li"><a href="https://travel.yandex.ru" class="footer__link"
+                        target="_blank">Путешествия</a></li>
+            </ul>
+        </nav>
         <p class="footer__copyright">© 2020 г. Павел Хохлов</p>
     </footer>
 </body>
