--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
     <link rel="shortcut icon" href="images/train.jpg" type="image/x-icon">
-    <title>Путешествия по России</title><!-- исправил на русский -->
+    <title>Путешествия по России</title>
 </head>
 
 <body class="root">
@@ -29,7 +29,7 @@
 
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</h2>
             <img src="images/lead__image.svg" alt="обложка вагон поезд" class="lead__image">
             <p class="lead__capture">ваша полка — верхняя</p>
         </section>
@@ -102,15 +102,12 @@
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
                         —
-                        спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                        спокойного Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.
                         Уникальная природная зона на краю российского анклава.</p>
                     <p class="place__paragraph">На этом Калининградская область не заканчивается.
-                        Для&nbsp;путешественника и
-                        исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-                        наследие
-                        россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
+                        Для&nbsp;путешественника и&nbsp;исследователя там же по соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
                         спокойствие
-                        природы и запах стального, прохладного моря.</p>
+                        природы и&nbsp;запах стального, прохладного моря.</p>
                 </div>
             </article>
             <article class="place">
@@ -125,15 +122,15 @@
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой
                         на юг —
-                        тайга, а&nbsp;на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                        тайга, а&nbsp;на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым&nbsp;морем.</p>
                     <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
                         фестиваля в
-                        Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
+                        Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об&nbsp;уроках
                         географии.
                         Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов
                         вас
                         давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-                        в Мурманск.</p>
+                        в&nbsp;Мурманск.</p>
                 </div>
             </article>
             <article class="place">
@@ -146,16 +143,15 @@
                 <img src="images/altay.jpg" alt="алтай тайга ноутбук" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                        В&nbsp;первую&nbsp;очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                         горные
                         реки и
-                        озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних
+                        озёра. А если вы откроете в&nbsp;автомобиле окна, сможете познакомиться с невидимым чудом здешних
                         мест —
                         горным воздухом.</p>
                     <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
                         увидите
-                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а
-                        на
+                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
                         равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
             </article>
@@ -169,7 +165,7 @@
                 <img src="images/baykal.jpg" alt="байкал озеро" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                        в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
+                        в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно из&nbsp;красивейших
                         мест в
                         России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное
@@ -195,10 +191,10 @@
                         национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
                         больше
                         чем
-                        полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван
+                        полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,&nbsp;чем увидал его Иван
                         Грозный.
-                        В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-                        в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                        В&nbsp;девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+                        в&nbsp;паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </article>
         </section>
@@ -207,7 +203,7 @@
 
         <section class="cover">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                 <h3 class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие
                     от&nbsp;столицы&nbsp;до
                     Байкала на
