--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
 
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</h2>
-            <img src="images/lead__image.svg" alt="обложка вагон поезд" class="lead__image">
-            <p class="lead__capture">ваша полка — верхняя</p>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</p>
+            <!--исправил тег на р вместо h2-->
+            <figure class="lead__image-block">
+                <img src="images/lead__image.svg" alt="обложка вагон поезд" class="lead__image">
+                <figcaption class="lead__capture">ваша полка — верхняя</figcaption>
+            </figure>
         </section>
 
         <!-- INTRO -->
@@ -48,25 +51,26 @@
                 километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
             </p>
             <ul class="intro__lists">
-                <li class="intro__lists-item">
-                    <p class="intro__list intro__list_font_bold">Часовых поясов&nbsp;</p>
-                    <p class="intro__list intro__list_font_regular">11</p>
+                <li>
+                    <!--убрал лишний класс, добавил тег span-->
+                    <p class="intro__list intro__list_font_bold">Часовых поясов&nbsp;
+                        <span class="intro__list_font_regular">11</span></p>
                 </li>
-                <li class="intro__lists-item">
-                    <p class="intro__list intro__list_font_bold">Объектов природного наследия ЮНЕСКО&nbsp;</p>
-                    <p class="intro__list intro__list_font_regular">12</p>
+                <li>
+                    <p class="intro__list intro__list_font_bold">Объектов природного наследия ЮНЕСКО&nbsp;
+                        <span class="intro__list_font_regular">12</span></p>
                 </li>
-                <li class="intro__lists-item">
-                    <p class="intro__list intro__list_font_bold">Объектов культурного наследия ЮНЕСКО&nbsp;</p>
-                    <p class="intro__list intro__list_font_regular">16</p>
+                <li>
+                    <p class="intro__list intro__list_font_bold">Объектов культурного наследия ЮНЕСКО&nbsp;
+                        <span class="intro__list_font_regular">16</span></p>
                 </li>
-                <li class="intro__lists-item">
-                    <p class="intro__list intro__list_font_bold">Природных заповедников&nbsp;</p>
-                    <p class="intro__list intro__list_font_regular">105</p>
+                <li>
+                    <p class="intro__list intro__list_font_bold">Природных заповедников&nbsp;
+                        <span class="intro__list_font_regular">105</span></p>
                 </li>
-                <li class="intro__lists-item">
-                    <p class="intro__list intro__list_font_bold">Аэропортов&nbsp;</p>
-                    <p class="intro__list intro__list_font_regular">241</p>
+                <li>
+                    <p class="intro__list intro__list_font_bold">Аэропортов&nbsp;
+                        <span class="intro__list_font_regular">241</span></p>
                 </li>
             </ul>
         </section>
@@ -102,10 +106,13 @@
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
                         —
-                        спокойного Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.
+                        спокойного Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря
+                        с&nbsp;другой.
                         Уникальная природная зона на краю российского анклава.</p>
                     <p class="place__paragraph">На этом Калининградская область не заканчивается.
-                        Для&nbsp;путешественника и&nbsp;исследователя там же по соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
+                        Для&nbsp;путешественника и&nbsp;исследователя там же по соседству — самая западная точка России,
+                        Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера
+                        здешних мест исключает суету, окуная в
                         спокойствие
                         природы и&nbsp;запах стального, прохладного моря.</p>
                 </div>
@@ -143,15 +150,18 @@
                 <img src="images/altay.jpg" alt="алтай тайга ноутбук" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-                        В&nbsp;первую&nbsp;очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                        В&nbsp;первую&nbsp;очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                        соснами,
                         горные
                         реки и
-                        озёра. А если вы откроете в&nbsp;автомобиле окна, сможете познакомиться с невидимым чудом здешних
+                        озёра. А если вы откроете в&nbsp;автомобиле окна, сможете познакомиться с невидимым чудом
+                        здешних
                         мест —
                         горным воздухом.</p>
                     <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
                         увидите
-                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
+                        всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы,
+                        а&nbsp;на
                         равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
             </article>
@@ -165,7 +175,8 @@
                 <img src="images/baykal.jpg" alt="байкал озеро" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                        в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно из&nbsp;красивейших
+                        в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно
+                        из&nbsp;красивейших
                         мест в
                         России.</p>
                     <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное
@@ -191,7 +202,8 @@
                         национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
                         больше
                         чем
-                        полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,&nbsp;чем увидал его Иван
+                        полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,&nbsp;чем увидал его
+                        Иван
                         Грозный.
                         В&nbsp;девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в&nbsp;паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
