--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- HEADER -->
 
     <header class="header">
-        <img src="images/logo.svg" class="logo" alt="логотип"></img>
+        <img src="images/logo.svg" class="logo" alt="логотип">
         <nav class="header__lang">
             <a href="#" class="header__link header__link_active_underline">Ru</a>
             <a href="#" class="header__link">En</a>
@@ -96,7 +96,7 @@
 
         <section class="places">
             <article class="place">
-                <h3 class="place__title">Куршская коса</h3>
+                <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
@@ -118,7 +118,7 @@
                 </div>
             </article>
             <article class="place">
-                <h3 class="place__title">Кольский</h3>
+                <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
@@ -141,7 +141,7 @@
                 </div>
             </article>
             <article class="place">
-                <h3 class="place__title">Алтай</h3>
+                <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
@@ -166,7 +166,7 @@
                 </div>
             </article>
             <article class="place">
-                <h3 class="place__title">Зимний Байкал</h3>
+                <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="https://vk.com/baikalmile" class="place__link"
@@ -188,7 +188,7 @@
                 </div>
             </article>
             <article class="place">
-                <h3 class="place__title">Карелия</h3>
+                <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
