--- a/src/index.html
+++ b/src/index.html
@@ -83,18 +83,18 @@
         <!-- PHOTO-GRID -->
 
         <section class="photo-grid">
-            <img src="images/__item1.jpg" alt="вагон окно" class="photo-grid__item">
-            <img src="images/__item2.jpg" alt="небо облака" class="photo-grid__item">
-            <img src="images/__item3.jpg" alt="поле недо стог" class="photo-grid__item">
-            <img src="images/__item4.jpg" alt="туман тайга" class="photo-grid__item">
-            <img src="images/__item5.jpg" alt="лед колесо" class="photo-grid__item">
-            <img src="images/__item6.jpg" alt="море небо песок" class="photo-grid__item">
-            <img src="images/__item7.jpg" alt="горы" class="photo-grid__item">
-            <img src="images/__item8.jpg" alt="знак пешеход" class="photo-grid__item">
-            <img src="images/__item9.jpg" alt="сопки таман" class="photo-grid__item">
-            <img src="images/__item10.jpg" alt="вулкан" class="photo-grid__item">
-            <img src="images/__item11.jpg" alt="скалы" class="photo-grid__item">
-            <img src="images/__item12.jpg" alt="туман" class="photo-grid__item">
+            <img src="./images/item1.jpg" alt="вагон окно" class="photo-grid__item">
+            <img src="./images/item2.jpg" alt="небо облака" class="photo-grid__item">
+            <img src="./images/item3.jpg" alt="поле недо стог" class="photo-grid__item">
+            <img src="./images/item4.jpg" alt="туман тайга" class="photo-grid__item">
+            <img src="./images/item5.jpg" alt="лед колесо" class="photo-grid__item">
+            <img src="./images/item6.jpg" alt="море небо песок" class="photo-grid__item">
+            <img src="./images/item7.jpg" alt="горы" class="photo-grid__item">
+            <img src="./images/item8.jpg" alt="знак пешеход" class="photo-grid__item">
+            <img src="./images/item9.jpg" alt="сопки таман" class="photo-grid__item">
+            <img src="./images/item10.jpg" alt="вулкан" class="photo-grid__item">
+            <img src="./images/item11.jpg" alt="скалы" class="photo-grid__item">
+            <img src="./images/item12.jpg" alt="туман" class="photo-grid__item">
         </section>
 
         <!-- PLACES -->
@@ -106,7 +106,7 @@
                     <h4 class="place__url-heading">URL</h4>
                     <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
                 </div>
-                <img src="images/kurshskaya.jpg" alt="куршская коса море небо" class="place__image">
+                <img src="./images/kurshskaya.jpg" alt="куршская коса море небо" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта
@@ -129,7 +129,7 @@
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
                         target="_blank">National Geographic</a>
                 </div>
-                <img src="images/kolskiy.jpg" alt="кольский снег сопки" class="place__image">
+                <img src="./images/kolskiy.jpg" alt="кольский снег сопки" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                         которой
@@ -152,7 +152,7 @@
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                         class="place__link">Facebook</a>
                 </div>
-                <img src="images/altay.jpg" alt="алтай тайга ноутбук" class="place__image">
+                <img src="./images/altay.jpg" alt="алтай тайга ноутбук" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                         В&nbsp;первую&nbsp;очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
@@ -177,7 +177,7 @@
                     <a href="https://vk.com/baikalmile" class="place__link"
                         target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <img src="images/baykal.jpg" alt="байкал озеро" class="place__image">
+                <img src="./images/baykal.jpg" alt="байкал озеро" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                         в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно
@@ -198,7 +198,7 @@
                     <h4 class="place__url-heading">URL</h4>
                     <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
                 </div>
-                <img src="images/kareliya.jpg" alt="карелия тайга" class="place__image">
+                <img src="./images/kareliya.jpg" alt="карелия тайга" class="place__image">
                 <div class="place__text">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                         сибирская
