--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,10 @@
         <section class="lead">
             <h1 class="lead__title"></h1>
             <p class="lead__subtitle"></p>
-            <!--исправил тег на р вместо h2-->
             <figure class="lead__figure">
                 <img src="./images/lead__image.jpg" alt="обложка вагон поезд" class="lead__image">
-                <figcaption class="lead__capture">ваша полка — верхняя</figcaption>
+                <figcaption class="lead__capture"></figcaption>
+                <img src="./images/intro_tip.svg" alt="маршрут города" class="lead__tip">
             </figure>
         </section>
 
@@ -52,30 +52,29 @@
             </p>
             <ul class="intro__lists">
                 <li>
-                    <!--убрал лишний класс, добавил тег span-->
-                    <p class="intro__list intro__list_font_bold">Часовых поясов&nbsp;
-                        <span class="intro__list_font_regular">11</span>
+                    <p class="intro__list intro__list_font_bold">
                     </p>
+                    <span class="intro__list_font_regular">11</span>
                 </li>
                 <li>
-                    <p class="intro__list intro__list_font_bold">Объектов природного наследия ЮНЕСКО&nbsp;
-                        <span class="intro__list_font_regular">12</span>
+                    <p class="intro__list intro__list_font_bold">
                     </p>
+                    <span class="intro__list_font_regular">12</span>
                 </li>
                 <li>
-                    <p class="intro__list intro__list_font_bold">Объектов культурного наследия ЮНЕСКО&nbsp;
-                        <span class="intro__list_font_regular">16</span>
+                    <p class="intro__list intro__list_font_bold">
                     </p>
+                    <span class="intro__list_font_regular">16</span>
                 </li>
                 <li>
-                    <p class="intro__list intro__list_font_bold">Природных заповедников&nbsp;
-                        <span class="intro__list_font_regular">105</span>
+                    <p class="intro__list intro__list_font_bold">
                     </p>
+                    <span class="intro__list_font_regular">105</span>
                 </li>
                 <li>
-                    <p class="intro__list intro__list_font_bold">Аэропортов&nbsp;
-                        <span class="intro__list_font_regular">241</span>
+                    <p class="intro__list intro__list_font_bold">
                     </p>
+                    <span class="intro__list_font_regular">241</span>
                 </li>
             </ul>
         </section>
